# proteus-rs

./: Cargo.toml  build.rs  grammar.ebnf
src/: ast.rs  eval.rs  main.rs  program1.pro  proteus.lalrpop
tests/: lights.pro
