[package]
name = "proteus-rs"
version = "0.1.1"
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.19.9" }

[dependencies]
lalrpop-util = {version = "0.19", features = ["lexer"]}
lockfree = "0.5.1"
multimap = "0.9.0"
serial_int = "2.0.0"
lazy_static = "1.4.0"
egui = "0.21.0"
eframe = "0.21.3"
egui_graph = "0.1.0"
egui_node_graph = "0.4.0"
delta = "0.2.1"

[features]
api_version = []